--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,12 +17,12 @@ jobs:
       - name: Check for long lines
         if: always()
         run: |
-          ! (find LeanAPAP -name "*.lean" -type f -exec grep -E -H -n '^.{101,}$' {} \; | grep -v -E 'https?://')
+          ! (find GibbsMeasure -name "*.lean" -type f -exec grep -E -H -n '^.{101,}$' {} \; | grep -v -E 'https?://')
 
       - name: Don't 'import Mathlib', use precise imports
         if: always()
         run: |
-          ! (find LeanAPAP -name "*.lean" -type f -print0 | xargs -0 grep -E -n '^import Mathlib$')
+          ! (find GibbsMeasure -name "*.lean" -type f -print0 | xargs -0 grep -E -n '^import Mathlib$')
 
   build_project:
     runs-on: ubuntu-latest
@@ -35,10 +35,10 @@ jobs:
 
       - name: Print files to upstream
         run: |
-          grep -r --files-without-match 'import LeanAPAP' LeanAPAP | sort > 1.txt
-          grep -r --files-with-match 'sorry' LeanAPAP | sort > 2.txt
+          grep -r --files-without-match 'import GibbsMeasure' GibbsMeasure | sort > 1.txt
+          grep -r --files-with-match 'sorry' GibbsMeasure | sort > 2.txt
           mkdir -p docs/_includes
-          comm -23 1.txt 2.txt | sed -e 's/^\(.*\)$/- [`\1`](https:\/\/github.com\/YaelDillies\/LeanAPAP\/blob\/master\/\1)/' > docs/_includes/files_to_upstream.md
+          comm -23 1.txt 2.txt | sed -e 's/^\(.*\)$/- [`\1`](https:\/\/github.com\/YaelDillies\/GibbsMeasure\/blob\/master\/\1)/' > docs/_includes/files_to_upstream.md
           rm 1.txt 2.txt
 
       - name: Count sorries
@@ -51,7 +51,7 @@ jobs:
         run: ~/.elan/bin/lake exe cache get || true
 
       - name: Build project
-        run: ~/.elan/bin/lake build Summer2024
+        run: ~/.elan/bin/lake build GibbsMeasure
 
       - name: Cache mathlib docs
         uses: actions/cache@v3
@@ -63,13 +63,13 @@ jobs:
             .lake/build/doc/Std
             .lake/build/doc/Mathlib
             .lake/build/doc/declarations
-            !.lake/build/doc/declarations/declaration-data-Summer2024*
+            !.lake/build/doc/declarations/declaration-data-GibbsMeasure*
           key: MathlibDoc-${{ hashFiles('lake-manifest.json') }}
           restore-keys: |
             MathlibDoc-
 
       - name: Build documentation
-        run: ~/.elan/bin/lake -R -Kenv=dev build Summer2024:docs
+        run: ~/.elan/bin/lake -R -Kenv=dev build GibbsMeasure:docs
 
       - name: Build blueprint and copy to `docs/blueprint`
         uses: xu-cheng/texlive-action@v2
