--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -20,7 +20,7 @@
 
 title: Gibbs Measures and Phase Transitions
 #email: your-email@example.com
-description: A digitisation of the Kelley-Meka bound on Roth numbers
+description: A textbook formalisation of lattice models
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://james18lpc.github.io/GibbsMeasure/" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
