--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,3 +1,5 @@
+name: Build Lean project
+
 on:
   push:
     branches:
@@ -30,19 +32,14 @@ jobs:
     steps:
       - name: Checkout project
         uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
+      - name: Copy README.md to website/index.md
+        run: cp README.md website/index.md
 
       - name: Print files to upstream
         run: |
-          grep -r --files-without-match 'import GibbsMeasure' GibbsMeasure | sort > 1.txt
-          grep -r --files-with-match 'sorry' GibbsMeasure | sort > 2.txt
           mkdir -p website/_includes
-          comm -23 1.txt 2.txt | sed -e 's/^\(.*\)$/- [`\1`](https:\/\/github.com\/james18lpc\/GibbsMeasure\/blob\/master\/\1)/' > website/_includes/files_to_upstream.md
-          rm 1.txt 2.txt
-
-      - name: Count sorries
-        run: python scripts/count_sorry.py
+          python3 scripts/upstreaming_dashboard.py
 
       - name: Install elan
         run: curl https://raw.githubusercontent.com/leanprover/elan/master/elan-init.sh -sSf | sh -s -- -y --default-toolchain leanprover/lean4:4.5.0
@@ -53,57 +50,49 @@ jobs:
       - name: Build project
         run: ~/.elan/bin/lake build GibbsMeasure
 
-      - name: Cache mathlib docs
+      - name: Cache dependencies docs
         uses: actions/cache@v3
         with:
-          path: |
-            .lake/build/doc/Init
-            .lake/build/doc/Lake
-            .lake/build/doc/Lean
-            .lake/build/doc/Std
-            .lake/build/doc/Mathlib
-            .lake/build/doc/declarations
-            !.lake/build/doc/declarations/declaration-data-GibbsMeasure*
+          path: docbuild/.lake/build/doc
           key: MathlibDoc-${{ hashFiles('lake-manifest.json') }}
           restore-keys: |
             MathlibDoc-
 
       - name: Build documentation
-        run: ~/.elan/bin/lake -R -Kenv=dev build GibbsMeasure:docs
+        working-directory: docbuild
+        run: |
+          ~/.elan/bin/lake exe cache get || true
+          ~/.elan/bin/lake build GibbsMeasure:docs
 
       - name: Build blueprint and copy to `website/blueprint`
         uses: xu-cheng/texlive-action@v2
         with:
-          docker_image: ghcr.io/xu-cheng/texlive-full:20231201
+          scheme: full
           run: |
             apk update
             apk add --update make py3-pip git pkgconfig graphviz graphviz-dev gcc musl-dev
             git config --global --add safe.directory $GITHUB_WORKSPACE
             git config --global --add safe.directory `pwd`
-            python3 -m venv env
-            source env/bin/activate
-            pip install --upgrade pip requests wheel
-            pip install pygraphviz --global-option=build_ext --global-option="-L/usr/lib/graphviz/" --global-option="-R/usr/lib/graphviz/"
-            pip install leanblueprint
-            leanblueprint pdf
-            cp blueprint/print/print.pdf website/blueprint.pdf
-            leanblueprint web
-            cp -r blueprint/web website/blueprint
+            python3 -m pip install --upgrade pip requests wheel
+            python3 -m pip install pygraphviz --global-option=build_ext --global-option="-L/usr/lib/graphviz/" --global-option="-R/usr/lib/graphviz/"
+            pip install -r blueprint/requirements.txt
+            python3 -m pip install invoke
+            inv all
 
-      - name: Move documentation to `website/docs`
+      - name: Copy documentation to `website/docs`
         run: |
-          mv .lake/build/doc website/docs
+          mv docbuild/.lake/build/doc website/docs
 
       - name: Bundle dependencies
         uses: ruby/setup-ruby@v1
         with:
-          working-directory: docs
-          ruby-version: "3.0"  # Specify Ruby version
-          bundler-cache: true  # Enable caching for bundler
+          working-directory: website
+          ruby-version: "3.0" # Not needed with a .ruby-version file
+          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
 
-      - name: Build website using Jekyll
-        working-directory: docs
-        run: JEKYLL_ENV=production bundle exec jekyll build  # Note this will also copy the blueprint and API doc into website/_site
+      - name: Bundle website
+        working-directory: website
+        run: JEKYLL_ENV=production bundle exec jekyll build
 
       - name: Upload docs & blueprint artifact
         uses: actions/upload-pages-artifact@v1
@@ -120,4 +109,4 @@ jobs:
 
       - name: Make sure the cache works
         run: |
-          mv website/docs .lake/build/doc
+          mv website/docs docbuild/.lake/build/doc
