Make `check_decls` look in the right location

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -110,5 +110,4 @@ jobs:
         uses: actions/deploy-pages@v4
 
       - name: Check declarations
-        run: |
-            ~/.elan/bin/lake exe checkdecls blueprint/lean_decls
+        run: ~/.elan/bin/lake exe checkdecls website/lean_decls
