--- a/lakefile.toml
+++ b/lakefile.toml
@@ -38,6 +38,7 @@ linter.style.setOption = true
 [[require]]
 name = "mathlib"
 git = "https://github.com/leanprover-community/mathlib4.git"
+rev = "v4.18.0"
 
 [[require]]
 name = "checkdecls"
