List keywords in lakefile This will show up on Reservoir.

--- a/lakefile.toml
+++ b/lakefile.toml
@@ -1,4 +1,5 @@
 name = "GibbsMeasure"
+keywords = ["math", "probability", "measure-theory", "statistical-physics", "percolation", "ising-model"]
 defaultTargets = ["GibbsMeasure"]
 
 [leanOptions]
