--- a/lakefile.toml
+++ b/lakefile.toml
@@ -25,7 +25,7 @@ weak.linter.style.setOption = true
 linter.docPrime = false
 linter.hashCommand = true
 linter.oldObtain = true
-linter.refine = true
+weak.linter.refine = true
 linter.style.cdot = true
 linter.style.dollarSyntax = true
 linter.style.header = true
@@ -39,7 +39,6 @@ linter.style.setOption = true
 [[require]]
 name = "mathlib"
 git = "https://github.com/leanprover-community/mathlib4.git"
-rev = "v4.18.0"
 
 [[require]]
 name = "checkdecls"
